# projectTemplates

./: README.md
SDL3/: compile_commands.json  makefile
cmake_template_cpp/: CMakeLists.txt  README.md
cmake_template_cpp/include/: test.hpp
cmake_template_cpp/libs/blazelib/: CMakeLists.txt
cmake_template_cpp/libs/blazelib/include/: blaze.hpp
cmake_template_cpp/libs/blazelib/src/: blaze.cpp
cmake_template_cpp/src/: main.cpp  test.cpp
glfw/: compile_commands.json  makefile
opengl_glfw_c/: Makefile  compile_commands.json
opengl_glfw_cpp/: Makefile  compile_commands.json
raylib/: CMakeLists.txt  Makefile  README.md  compile_commands.json  makefile
raylib/src/: main.c  main.cpp
sdl3/: CMakeLists.txt  main.cpp
vcpkg_templates/SDL3/: main.c
vcpkg_templates/glfw/.cache/clangd/index/: main.cpp.78B20A3B51D84846.idx
vcpkg_templates/glfw/src/: main.cpp
vcpkg_templates/opengl_glfw_c/: compile_commands.json
vcpkg_templates/opengl_glfw_c/.cache/clangd/index/: gl.c.7080D89C1AE8C07B.idx  gl.h.328F7A027FA2B5B7.idx  khrplatform.h.26ECF7A8BDA1BC6A.idx  main.c.3A36C2A889B9FD45.idx
vcpkg_templates/opengl_glfw_c/glad/include/glad/: gl.h
vcpkg_templates/opengl_glfw_c/src/: main.c
vcpkg_templates/opengl_glfw_cpp/: compile_commands.json
vcpkg_templates/opengl_glfw_cpp/src/: main.cpp
vcpkg_templates/vcpkg + cmake/: CMakeLists.txt  README.md  main.cpp
